--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "devDependencies": {
     "@types/node": "^20.4.8",
-    "@types/react": "^18.2.18",
+    "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "eslint": "^8.46.0",
+    "eslint-config-next": "^13.4.19",
     "typescript": "^5.1.6"
   },
   "dependencies": {
@@ -23,6 +24,7 @@
     "next": "^13.4.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.32.5",
     "styled-components": "^6.0.7",
     "yup": "^1.2.0"
   }
